<resources>
    <string name="app_name">C6Tv</string>
    <string name="main">Welcome To C6 TV Channel</string>
    <string name="title_activity_youtube">Youtube</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">c6tv.in@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_live">LiveTV</string>
    <string name="menu_web">WebSite</string>
    <string name="menu_youtube">Youtube</string>

    <string name="navname">Welcome To C6 TV Channel</string>
    <string name="livtv">C6 Tv ></string>
    <string name="ytvideos">C6TV Videos ></string>
    <string name="webc">C6TV Website ></string>
</resources>
