<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/menu_live" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube_searched_for_black_24dp"
            android:title="@string/menu_youtube" />

    </group>


</menu>
