<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bagr"
    android:layout_height="match_parent"
    tools:context=".Home">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navname"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:drawableStart="@drawable/tv"
        android:drawableLeft="@drawable/tv"
        android:drawablePadding="6dp"
        android:gravity="left|center"
        android:onClick="liveTV"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/livtv"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:drawableStart="@drawable/youtube"
        android:drawableLeft="@drawable/youtube"
        android:drawablePadding="8dp"
        android:gravity="left|center"
        android:onClick="youtube"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/ytvideos"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:drawableStart="@drawable/website"
        android:drawableLeft="@drawable/website"
        android:drawablePadding="6dp"
        android:gravity="left|center"
        android:onClick="webview"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/webc"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.026" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.073">
        <at.markushi.ui.CircleButton
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:paddingLeft="3dp"
        android:paddingRight="2dp"
        android:src="@drawable/facebook"
        app:cb_color="#FFF44336"
        android:onClick="facebook"
        app:cb_pressedRingWidth="8dip" />
        <at.markushi.ui.CircleButton
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:paddingLeft="3dp"
        android:paddingRight="2dp"
        android:onClick="twitter"
        android:src="@drawable/twitter"
        app:cb_color="#FFF44336"
        app:cb_pressedRingWidth="8dip" />
        <at.markushi.ui.CircleButton
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:paddingLeft="3dp"
        android:paddingRight="2dp"
        android:onClick="whatsapp"
        android:src="@drawable/whatsapp"
        app:cb_color="#FFF44336"
        app:cb_pressedRingWidth="8dip" />
        <at.markushi.ui.CircleButton
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:paddingLeft="3dp"
        android:paddingRight="2dp"
        android:onClick="instagram"
        android:src="@drawable/instagram"
        app:cb_color="#FFF44336"
        app:cb_pressedRingWidth="8dip" />
        <at.markushi.ui.CircleButton
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:paddingLeft="3dp"
        android:paddingRight="2dp"
        android:src="@drawable/telegram"
        app:cb_color="#F44336"
        android:onClick="telegram"
        app:cb_pressedRingWidth="8dip" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:backgroundTintMode="screen"
        android:onClick="share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@drawable/ic_share_black_24dp" />
</android.support.constraint.ConstraintLayout>